--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ font-size: 16px;
 </div>
 <div id="formula2">
 	<h2>具体计算公式</h2>
-	<p>a 和 b公式取最低值，且最高值不超过70万 新政:<a href="https://gjj.wuhu.gov.cn/openness/public/6596901/38251501.html">关于调整住房公积金贷款最高额度政策的通知</a></p>
+	<p>a 和 b公式取最低值，且最高值不超过<font color="red">70</font>万 新政:<a href="https://gjj.wuhu.gov.cn/openness/public/6596901/38251501.html">关于调整住房公积金贷款最高额度政策的通知</a></p>
 	<p>a：借款人夫妻双方缴存基数之和×12个月×还款能力系数×可贷年限。</p>
 	<p>b：借款人公积金账户缴存余额×缴存时间倍数+借款人配偶公积金账户缴存余额×缴存时间倍数。</p>
 	<h2>指标说明</h2>
@@ -150,9 +150,9 @@ font-size: 16px;
 	<p>2.“可贷年限”：贷款到期日不超过借款人法定退休时间5年，最长不超过30年。</p>
 	<p>3.“缴存时间倍数”：</p>
 	<ul>
-		<li>连续缴存住房公积金在1年以内（含1年），缴存时间倍数为10倍；</li>
+		<li>连续缴存住房公积金在1年以内（含1年），缴存时间倍数为<font color="red">10</font>倍；</li>
 		<li>连续缴存住房公积金在1年以上2年以内（含2年），缴存时间倍数为15倍；</li>
-		<li>连续缴存住房公积金2年以上，缴存时间倍数为20倍。</li>
+		<li>连续缴存住房公积金2年以上，缴存时间倍数为<font color="red">20</font>倍。</li>
 	</ul>
 	<p>账户缴存余额不足1万元的按1万元计算。</p>
 	<p>通知原文: <a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8401435.html">关于优化住房公积金个人贷款额度计算规则的通知</a> </p>
