--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ font-size: 16px;
 	<p>3.“缴存时间倍数”：</p>
 	<ul>
 		<li>连续缴存住房公积金在1年以内（含1年），缴存时间倍数为<font color="red">10</font>倍；</li>
-		<li>连续缴存住房公积金在1年以上2年以内（含2年），缴存时间倍数为15倍；</li>
+		<li>连续缴存住房公积金在1年以上2年以内（含2年），缴存时间倍数为<font color="red">15</font>倍；</li>
 		<li>连续缴存住房公积金2年以上，缴存时间倍数为<font color="red">20</font>倍。</li>
 	</ul>
 	<p>账户缴存余额不足1万元的按1万元计算。</p>
