--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>芜湖公积金贷款额度计算器</title>
+<title>芜湖公积金贷款额度(夫妻双方)计算器</title>
 <meta charset="UTF-8">
 <style type="text/css">
 body {
@@ -81,7 +81,7 @@ font-size: 16px;
 </style>
 </head>
 <body>
-<h1>芜湖公积金贷款额度计算器</h1>
+<h1>芜湖公积金贷款额度(夫妻双方)计算器</h1>
 <div id="formula1">
 <table>
 <thead>
