--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ font-size: 16px;
 <td></td>
 </tr>
 <tr>
-<td>贷款额度</td>
+<td>贷款额度(max 70w)</td>
 <td><input type="number" id="result" disabled></td>
 <td>元</td>
 </tr>
