--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ font-size: 16px;
 </head>
 <body>
 <h1>芜湖公积金贷款额度(夫妻双方)计算器</h1>
+<h4>[更新至2023年7月，后续如有政策更新可能计算额度不准]</h4>
 <div id="formula1">
 <table>
 <thead>
