--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ font-size: 16px;
 <h1>芜湖公积金贷款额度(夫妻双方)计算器</h1>
 <h4>[更新至2023年5月，后续如有政策更新可能计算额度不准]</h4>
 <h4>[后续政策更新]</h4>
-<h4><a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8536077.html">关于进一步完善住房公积金贷款政策的通知</a></h4>
+<h4>首套房上浮20%，多子女上浮10%<a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8536077.html">关于进一步完善住房公积金贷款政策的通知</a></h4>
 <div id="formula1">
 <table>
 <thead>
