--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ font-size: 16px;
 <body>
 <h1>芜湖公积金贷款额度(夫妻双方)计算器</h1>
 <h4>[更新至2023年5月，后续如有政策更新可能计算额度不准]</h4>
-<h4>[后续政策更新]</h4>
-<h4>首套房上浮20%，多子女上浮10%<a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8536077.html">关于进一步完善住房公积金贷款政策的通知</a></h4>
+<h4>[政策更新太快，已不再更新]</h4>
 <div id="formula1">
 <table>
 <thead>
@@ -163,7 +162,11 @@ font-size: 16px;
 		<li>连续缴存住房公积金2年以上，缴存时间倍数为<font color="red">20</font>倍。</li>
 	</ul>
 	<p>账户缴存余额不足1万元的按1万元计算。</p>
-	<p>通知原文: <a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8401435.html">关于优化住房公积金个人贷款额度计算规则的通知</a> </p>
+	<p>通知: </p>
+	<p>2023年3月: <a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8401435.html">关于优化住房公积金个人贷款额度计算规则的通知</a> </p>
+	<p>2023年5月: <a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8408525.html">关于调整住房公积金贷款最高额度政策的通知</a> </p>
+	<p>2023年10月: <a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8536077.html">关于进一步完善住房公积金贷款政策的通知</a> </p>
+	<p>2024年6月: <a href="https://gjj.wuhu.gov.cn/zcfg/zcfg/8618440.html">关于进一步完善住房公积金政策的通知</a> </p>
 	<p>如有问题，请联系hi@svenshen.com</p>
 
 </div>
